--- a/views/results.ejs
+++ b/views/results.ejs
@@ -12,8 +12,8 @@
         <ul>
             <a href="/"><li>Food For Now</li></a>
             <!-- Search will be hidden on the Home page: index.ejs -->
-            <a href="/" ><li>Search</li> </a>
-            <a href="/foodforlater" ><li>My List</li>
+            <a href="/" ><li>Search</li></a>
+            <a href="/foodforlater" ><li>My List</li></a>
         </ul>
     </nav>
 
