--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,7 +20,7 @@
     <!-- Search Form -->
     <form>
         <input type="text" value="ingredients" placeholder="Type in some ingredients..." />
-        <button id="searchButton" type="submit">Find Recipies</button>
+        <button id="searchButton" type="submit">Find Recipes</button>
     </form>
 
     <!-- Register / Login -->
