--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,45 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Food For Later</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Food For Later</title>
 </head>
+
 <body>
-<main>
+  <main>
     <!-- Top Nav -->
     <nav>
-        <ul>
-            <a href="/"><li>Food For Now</li></a>
-            <!-- Search will be hidden on the Home page: index.ejs -->
-            <a href="/" ><li>Search</li></a>
-            <a href="/foodforlater" ><li>My List</li></a>
-        </ul>
+      <ul>
+        <a href="/">
+          <li>Food For Now</li>
+        </a>
+        <!-- Search will be hidden on the Home page: index.ejs -->
+        <a href="/">
+          <li>Search</li>
+        </a>
+        <a href="/foodforlater">
+          <li>My List</li>
+        </a>
+      </ul>
     </nav>
 
     <!-- Search Form -->
     <form action="/search" method="POST">
-        <input type="text" name="search" placeholder="Type in some ingredients..." />
-        <button id="searchButton" type="submit">Find Recipes</button>
+      <input type="text" name="search" placeholder="Type in some ingredients..." />
+      <button id="searchButton" type="submit">Find Recipes</button>
     </form>
 
     <!-- Register / Login -->
     <ul>
-        <li>Register</li>
-        <li>Log In</li>
+      <li>Register</li>
+      <li>Log In</li>
     </ul>
 
     <!-- Footer -->
     <footer>
 
-        <ul>
-            <li>Food For Now &copy; 2020</li>
-            <li>Built by: Cavendish Bananas</li>`
-        </ul>
+      <ul>
+        <li>Food For Now &copy; 2020</li>
+        <li>Built by: Cavendish Bananas</li>`
+      </ul>
 
     </footer>
 
 
-</main>   
+  </main>
 </body>
+
 </html>
