--- a/views/results.ejs
+++ b/views/results.ejs
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Recipie Results.</title>
+  <title>Recipe Results.</title>
 </head>
 
 <body>
@@ -37,6 +37,15 @@
             <li><%= ingredient %></li>
             <% }); %>
           </ul>
+          <form action="/save" method="POST">
+            <input type="hidden" name="image_url" value="<%= recipe.image_url %>">
+            <input type="hidden" name="label" value="<%= recipe.label %>">
+            <input type="hidden" name="ingredientLines" value="<%= JSON.stringify(recipe.ingredientLines) %>">
+            <input type="hidden" name="recipe_url" value="<%= recipe.recipe_url %>">
+            <input type="hidden" name="dietLabels" value="<%= recipe.dietLabels %>">
+            <input type="hidden" name="healthLabels" value="<%= recipe.healthLabels %>">
+            <button type="submit">Save</button>
+          </form>
         </article>
       <% }); %>
     </section>
