--- a/public/css/theme.css
+++ b/public/css/theme.css
@@ -1,4 +1,15 @@
 
+/* CSS Variables */
+
+:root {
+    --primaryColor: #41FF1A;
+}
+
+/* ************************  */
+
+
+
+
 /*  Main Color Theme */
 
 /* Color Theme Swatches in Hex */
