--- a/views/mylist.ejs
+++ b/views/mylist.ejs
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-  <main>
+  <main id="foodForLaterMain">
     <!-- Top Nav -->
     <nav>
       <ul>
@@ -30,22 +30,26 @@
         </a>
       </ul>
     </nav>
-    <section>
+    <header>
+        <h1> My Recipes</h1>
+    </header>
+    <section id="foodForLaterSection">
       <% results.forEach(recipe => { %>
-        <form action="<%=`/delete/${recipe.id}?_method=DELETE` %>" method="post">
-          <fieldset>
-            <img src="<%= recipe.image_url %>">
-            <br>
-            <h4>Ingredients</h4>
-            <label><%= recipe.label %></label>
-            <% recipe.ingredientlines.forEach(ingredient => { %>
-            <br>
-            <label><%= ingredient %></label>
-            <br>
-            <% }); %>
-          </fieldset>
-          <button type='submit'>Delete Recipes</button>
-        </form>
+        <article>
+            <img src="<%= recipe.image_url %>"> 
+            <div>       
+                <h2><%= recipe.label %></h2>
+                <h4>Ingredients</h4>
+                <ul>
+                <% recipe.ingredientlines.forEach(ingredient => { %>            
+                <li><%= ingredient %></li>            
+                <% }); %>
+                </ul>
+                <form action="<%=`/delete/${recipe.id}?_method=DELETE` %>" method="post">
+                        <button type='submit'>Delete Recipes</button>
+                </form>
+            </div>    
+        </article>
       <% }); %>
     </section>
     <!-- Footer -->
