--- a/public/css/base.css
+++ b/public/css/base.css
@@ -8,14 +8,25 @@
     box-sizing: border-box;
 }
 
-body {
-    background-color: var(--primaryColor);
+#indexMain {
+    background-image: url('/img/foodbg.png');
+    background-size: 100vh;
+}
+
+#foodForNowMain, #resultsMain {
+    background-color: rgb(236, 233, 233);
 }
 
 a, a:link, a:visited {
     text-decoration: none;  
     color: #fff;
   }
+
+h1{
+    font-size: 1.8rem;
+    margin: 14px;
+    text-align: center;
+}
 
 main {
     height: 100vh;
@@ -24,14 +35,27 @@ main {
     justify-content: space-between;
 }
 
+.hidden {
+    display: none;
+}
+
+.overlay {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(13, 255, 117, 0.8);
+}
+
 /* Navigation */
 nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 0 14px;
-    margin-bottom: 42px;
-    background-color: rgb(83, 83, 83);
+    /* margin-bottom: 42px; */
+    background-color: rgba(13, 255, 117, 0.8);
 } 
 
 nav ul {
@@ -78,11 +102,14 @@ nav ul li{
     margin: 7px;
 }
 
+/* footer */
 footer {
     width: 100%;
     display: flex;
     justify-content: center;
-    margin-top: 42px;
+    padding-top: 14px;
+    background-color: rgba(13, 255, 117, 0.8)
+    /* margin-top: 42px; */
 }
 
 footer ul{
@@ -115,9 +142,10 @@ article {
     flex-direction: column;
     align-self: center;
     width: 90%;
-    background-color: coral;
-    border: 1px solid black;
+    background-color: #FF9F5C;
+    border: 1px solid rgba(0, 206, 189, 0.849);
     margin: 21px 0px;
+    box-shadow: 3px 4px #0dff76b0;
 }
 
 article div {
