--- a/views/mylist.ejs
+++ b/views/mylist.ejs
@@ -28,6 +28,9 @@
         <a href="/foodforlater">
           <li>My List</li>
         </a>
+        <a href="/aboutUs">
+          <li>About Us</li>
+        </a>
       </ul>
     </nav>
     <header>
