--- a/views/index.ejs
+++ b/views/index.ejs
@@ -30,7 +30,7 @@
     
         <form id="searchForm" action="/search" method="POST">
             <input type="text" name="search" placeholder="Type in some ingredients..." />
-            <button id="searchButton" type="submit">Find Recipes</button>
+            <button id="searchButton" class="primary-button " type="submit">Find Recipes</button>
             <!-- Register / Login -->
             <ul>
                 <li>Register</li>
@@ -51,6 +51,7 @@
   
     </footer>
   </main>
+  <%- include('./layout/cdn.ejs') %>
 </body>
 
 </html>
