about us changes

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,14 +17,23 @@
   <main id="indexMain">
     <!-- Top Nav -->
     
-    <nav class="bar">
-        <a href="/"><div>Food For Now</div></a>
-        <ul id="recipe">
-            <!-- Search will be hidden on the Home page: index.ejs -->
-            <a href="/" ><li>Search</li></a>
-            <a href="/foodforlater" ><li>My List</li></a>
-        </ul>
+    <nav>
+      <ul>
+        <a href="/">
+          <li>Food For Now</li>
+        </a>
+        <a href="/">
+          <li>Search</li>
+        </a>
+        <a href="/foodforlater">
+          <li>My List</li>
+        </a>
+        <a href="/aboutUs">
+          <li>About Us</li>
+        </a>
+      </ul>
     </nav>
+    
     <div class="overlay">
     <!-- Search Form -->
     
