--- a/public/css/base.css
+++ b/public/css/base.css
@@ -179,3 +179,8 @@ article div form {
 article div form button {
     align-self: flex-end;
 }
+
+#aboutUsSection article img{
+    width: 100%;
+    height: 300px;
+}
