--- a/views/about.ejs
+++ b/views/about.ejs
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-  <main id="nav">
+  <main id="aboutUsMain">
     <!-- Top Nav -->
     <nav>
       <ul>
@@ -32,9 +32,89 @@
         </a>
       </ul>
     </nav>
- 
-    <section>
+    <section id="aboutUsSection">
       <!-- Dev Cards -->
+        <article>
+          <img src="https://images.unsplash.com/photo-1528279335935-f486951a6adf?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2106&q=80"></img>
+          <div>
+            <h2>(They/Them) Steven Miyauchi</h2>
+            <h4>Hobbies:</h4>
+            <ul>
+              <li>Tennis</li>
+              <li>League Of Legends</li>
+              <li>Music</li>
+            </ul>
+            <h4>Skills:</h4>
+            <ul>
+                <li>HTML</li>
+                <li>JavaScript</li>
+                <li>CSS</li>
+                <li>PostGres</li>
+            </ul>
+          </div>
+          <div>
+            <h4>Social Links:</h4>
+            <ul>
+              <a href="https://www.facebook.com/steven.miyauchi">
+                <li>Facebook</li>
+              </a>
+            </ul>
+          </div>
+        </article>
+        <article>
+          <img src="https://images.unsplash.com/photo-1539808505172-71ad23d99b4a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=3034&q=80"></img>
+          <div>
+            <h2>(They/Them) Steven Miyauchi</h2>
+            <h4>Hobbies:</h4>
+            <ul>
+              <li>Tennis</li>
+              <li>League Of Legends</li>
+              <li>Music</li>
+            </ul>
+            <h4>Skills:</h4>
+            <ul>
+                <li>HTML</li>
+                <li>JavaScript</li>
+                <li>CSS</li>
+                <li>PostGres</li>
+            </ul>
+          </div>
+          <div>
+            <h4>Social Links:</h4>
+            <ul>
+              <a href="https://www.facebook.com/steven.miyauchi">
+                <li>Facebook</li>
+              </a>
+            </ul>
+          </div>
+        </article>
+        <article>
+          <img src="https://images.unsplash.com/photo-1539808505172-71ad23d99b4a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=3034&q=80"></img>
+          <div>
+            <h2>(They/Them) Steven Miyauchi</h2>
+            <h4>Hobbies:</h4>
+            <ul>
+              <li>Tennis</li>
+              <li>League Of Legends</li>
+              <li>Music</li>
+            </ul>
+            <h4>Skills:</h4>
+            <ul>
+                <li>HTML</li>
+                <li>JavaScript</li>
+                <li>CSS</li>
+                <li>PostGres</li>
+            </ul>
+          </div>
+          <div>
+            <h4>Social Links:</h4>
+            <ul>
+              <a href="https://www.facebook.com/steven.miyauchi">
+                <li>Facebook</li>
+              </a>
+            </ul>
+          </div>
+        </article>
         <article>
           <img src="https://images.unsplash.com/photo-1539808505172-71ad23d99b4a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=3034&q=80"></img>
           <div>
