added about me teddy

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -91,12 +91,12 @@
         <article>
           <img src="https://images.unsplash.com/photo-1539808505172-71ad23d99b4a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=3034&q=80"></img>
           <div>
-            <h2>(They/Them) Steven Miyauchi</h2>
+            <h2>Teddy Damian</h2>
             <h4>Hobbies:</h4>
             <ul>
-              <li>Tennis</li>
-              <li>League Of Legends</li>
-              <li>Music</li>
+              <li>Swimming</li>
+              <li>Baking</li>
+              <li>Electronic Music</li>
             </ul>
             <h4>Skills:</h4>
             <ul>
@@ -109,35 +109,8 @@
           <div>
             <h4>Social Links:</h4>
             <ul>
-              <a href="https://www.facebook.com/steven.miyauchi">
-                <li>Facebook</li>
-              </a>
-            </ul>
-          </div>
-        </article>
-        <article>
-          <img src="https://images.unsplash.com/photo-1539808505172-71ad23d99b4a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=3034&q=80"></img>
-          <div>
-            <h2>(They/Them) Steven Miyauchi</h2>
-            <h4>Hobbies:</h4>
-            <ul>
-              <li>Tennis</li>
-              <li>League Of Legends</li>
-              <li>Music</li>
-            </ul>
-            <h4>Skills:</h4>
-            <ul>
-                <li>HTML</li>
-                <li>JavaScript</li>
-                <li>CSS</li>
-                <li>PostGres</li>
-            </ul>
-          </div>
-          <div>
-            <h4>Social Links:</h4>
-            <ul>
-              <a href="https://www.facebook.com/steven.miyauchi">
-                <li>Facebook</li>
+              <a href="https://www.linkedin.com/in/tdamian">
+                <li>LinkedIn</li>
               </a>
             </ul>
           </div>
