--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+f<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -55,8 +55,8 @@
           <div>
             <h4>Social Links:</h4>
             <ul>
-              <a href="https://www.facebook.com/steven.miyauchi">
-                <li>Facebook</li>
+              <a href="https://www.linkedin.com/in/steven-miyauchi-b11a5497/">
+                <li>LinkedIn</li>
               </a>
             </ul>
           </div>
@@ -64,26 +64,27 @@
         <article>
           <img src="https://images.unsplash.com/photo-1539808505172-71ad23d99b4a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=3034&q=80"></img>
           <div>
-            <h2>(They/Them) Steven Miyauchi</h2>
-            <h4>Hobbies:</h4>
+            <h2>Brandon Gibbs (he/him) </h2>
+            <h4>Hobbies: </h4>
             <ul>
-              <li>Tennis</li>
-              <li>League Of Legends</li>
-              <li>Music</li>
+              <li>Tech</li>
+              <li>Wood and cement work</li>
+              <li>Music / Movies</li>
             </ul>
             <h4>Skills:</h4>
             <ul>
-                <li>HTML</li>
+                <li>HTML/CSS</li>
                 <li>JavaScript</li>
-                <li>CSS</li>
-                <li>PostGres</li>
+                <li>Postgres</li>
+                <li>Git / GitHub</li>
+
             </ul>
           </div>
           <div>
             <h4>Social Links:</h4>
             <ul>
-              <a href="https://www.facebook.com/steven.miyauchi">
-                <li>Facebook</li>
+              <a href="https://www.linkedin.com/in/brandon-gibbs-1211673a/">
+                <li>LinkedIn</li>
               </a>
             </ul>
           </div>
