--- a/views/results.ejs
+++ b/views/results.ejs
@@ -39,6 +39,15 @@
         <article>
           <img src="<%= recipe.image_url %>"/>
           <div>
+            <form class="saveForm" action="/save" method="POST">
+              <input type="hidden" name="image_url" value="<%= recipe.image_url %>">
+              <input type="hidden" name="label" value="<%= recipe.label %>">
+              <input type="hidden" name="ingredientLines" value="<%= JSON.stringify(recipe.ingredientLines) %>">
+              <input type="hidden" name="recipe_url" value="<%= recipe.recipe_url %>">
+              <input type="hidden" name="dietLabels" value="<%= recipe.dietLabels %>">
+              <input type="hidden" name="healthLabels" value="<%= recipe.healthLabels %>">
+              <button class="save" type="submit">Save</button>
+            </form>
             <h2><%= recipe.label %></h2>
             <h4>Ingredients</h4>
             <ul>
@@ -46,15 +55,7 @@
               <li><%= ingredient %></li>
               <% }); %>
             </ul>
-            <form action="/save" method="POST">
-              <input type="hidden" name="image_url" value="<%= recipe.image_url %>">
-              <input type="hidden" name="label" value="<%= recipe.label %>">
-              <input type="hidden" name="ingredientLines" value="<%= JSON.stringify(recipe.ingredientLines) %>">
-              <input type="hidden" name="recipe_url" value="<%= recipe.recipe_url %>">
-              <input type="hidden" name="dietLabels" value="<%= recipe.dietLabels %>">
-              <input type="hidden" name="healthLabels" value="<%= recipe.healthLabels %>">
-              <button type="submit">Save</button>
-            </form>
+            
           </div>
         </article>
       <% }); %>
