--- a/public/css/base.css
+++ b/public/css/base.css
@@ -1,4 +1,5 @@
 @import url('theme.css');
+@import url('https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&display=swap');
 
 *, *:before, *:after{
     box-sizing: inherit;
@@ -26,6 +27,14 @@ h1{
     font-size: 1.8rem;
     margin: 14px;
     text-align: center;
+    color: #FF9F5C;
+    text-shadow: 1px 2px darkslategray;
+}
+
+.mainHeading{
+    font-size: 4.2rem;
+    font-family: 'Amatic SC', cursive;
+
 }
 
 main {
@@ -51,7 +60,7 @@ nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0 14px;
+    padding: 21px 14px;
     /* margin-bottom: 42px; */
     background-color: rgba(13, 255, 117, 0.8);
 } 
@@ -72,15 +81,17 @@ nav ul li{
     flex-direction: column;
     width: 70%;
     align-self: center;
-    margin: 
 }
 
 #searchForm input{
     align-self: center;
     width: 100%;
     height: 45px;
-    margin: 7px;
-    border-radius: 21px;    
+    margin: 14px;
+    margin-bottom: 28px;
+    border-radius: 21px; 
+    border: none;
+    box-shadow: 1px 2px rgb(130, 134, 130);
 }
 
 #searchForm button {
@@ -88,6 +99,7 @@ nav ul li{
     height: 35px;
     width: 40%;
     border-radius: 21px;
+    box-shadow: 1px 2px rgb(130, 134, 130);
 }
 
 #searchForm ul{
@@ -158,7 +170,7 @@ article div {
     flex-direction: column;
     justify-content: space-around;
     align-self: center;
-    width: 90%;
+    width: 80%;
 
 }
 
@@ -185,6 +197,22 @@ article div form button {
     align-self: flex-end;
 }
 
+/* Article Scroll bar */
+
+article::-webkit-scrollbar {
+    width: 0px;
+    height: 100px;
+  }
+
+article::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 1px rgba(0, 0, 0, 0.3);
+  }
+   
+article::-webkit-scrollbar-thumb {
+    background-color: darkgrey;
+    outline: 1px solid slategrey;
+  }
+
 /* Button Styling */
 
 .button {
@@ -203,22 +231,41 @@ article div form button {
     background: none;
     border: none;
 }
+
 /* Edit Button */
 .fas, .fa-pencil-alt{
     color: rgba(170, 150, 37, 0.884);
-    font-size: 24px;
-    
+    font-size: 24px;    
+}
+
+/* Save */
+.saveForm {
+    width: 100%;
+    display: flex;
+    justify-content: flex-end;
+}
+
+.save {
+    border: none;
+    box-shadow: 1px 2px grey;
+    background-color: #5CFFA2;
+    width: 20%;
+    height: 30px;
+    border-radius: 21px;
+    align-self: flex-end !important;
 }
 
 .primary-button {
-    background: rgb(79,214,255);
+    background: #FF9F5C;
+    border: none;
 }
 
 .delete-form {
     display: flex;
     width: 20%;
-    align-self: flex-end;
+    align-self: start;
     margin: 0;
+    margin-top: -21px;
 }
 
 .ingredientsHeadding {
@@ -226,18 +273,22 @@ article div form button {
 }
 
 .showButton{
+    border: none;
+    background: none;
     display: inline-block;
     width: 10%;
+    text-shadow: 2px honeydew;
     align-self: flex-end;
+    margin-right: 28px;
 }
 
 .updateForm{
     display: flex;
     justify-content: center;
+    margin: 7px 0px;
 }
 
-.updateForm input{
-    
+.updateForm input{    
     height: 30px;
     width: 75%;
     border-radius: 50px 0 0 50px;
@@ -254,11 +305,6 @@ article div form button {
     border-bottom: 1px solid black;
     
 }
-
-.updateForm input{
-    
-}
-
 
 .editSubmit{
     border: none;
@@ -278,4 +324,27 @@ article div form button {
 #aboutUsSection article img{
     width: 100%;
     height: 300px;
+}
+
+
+@media (min-width: 768px) {
+    
+    section{
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: space-around;
+    }
+
+    article{
+        width: 45%;
+        min-height: 500px;
+        max-height: 500px;
+        overflow-y: scroll;
+    }
+}
+
+@media (min-width: 1020px){
+    article{
+        width: 30%;
+    }
 }
