last fixes..please.

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,4 +1,4 @@
-f<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -27,9 +27,6 @@ f<!DOCTYPE html>
         <a href="/foodforlater">
           <li>My List</li>
         </a>
-        <a href="/aboutUs">
-          <li>About Us</li>
-        </a>
       </ul>
     </nav>
     <section id="aboutUsSection">
@@ -37,7 +34,7 @@ f<!DOCTYPE html>
         <article>
           <img src="https://images.unsplash.com/photo-1528279335935-f486951a6adf?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2106&q=80"></img>
           <div>
-            <h2>(They/Them) Steven Miyauchi</h2>
+            <h2>Steven Miyauchi (He/Him)</h2>
             <h4>Hobbies:</h4>
             <ul>
               <li>Tennis</li>
@@ -179,7 +176,7 @@ f<!DOCTYPE html>
     <footer>
       <ul>
         <li>Food For Now &copy; 2020</li>
-        <li>Built by: Cavendish Bananas</li>`
+        <li>Built by: Cavendish Bananas</li>
       </ul>
     </footer>
   </main>
