please be it for this project.

--- a/views/results.ejs
+++ b/views/results.ejs
@@ -65,11 +65,10 @@
     <footer>
       <ul>
         <li>Food For Now &copy; 2020</li>
-        <li>Built by: Cavendish Bananas</li>`
+        <li>Built by: Cavendish Bananas</li>
       </ul>
     </footer>
   </main>
   <%- include('./layout/cdn.ejs') %>
-
 </body>
 </html>
